Fix lack of padding on mobile

--- a/_sass/pages/_hire_us.scss
+++ b/_sass/pages/_hire_us.scss
@@ -2,10 +2,6 @@
   @extend %readability-column;
 }
 
-.hire-row {
-  @extend %row;
-}
-
 .hire-contact-col {
   @include mt-6;
   width: 100%;
